syntax = "proto3";

package flow;

option go_package = "github.com/vorteil/direktiv/pkg/flow";

message ResumeRequest {
	optional string instanceId = 1;
	optional int32 step = 2;
}
